rc/rc-calm/main/default/objects/FinanceTransaction/fields/Credit_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit GL Account</label>
    <referenceTo>blng__GLAccount__c</referenceTo>
    <relationshipLabel>Finance Transactions (Credit GL Account)</relationshipLabel>
    <relationshipName>Finance_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>