rc/rc-calm/main/default/objects/FinanceTransaction/fields/Debit_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit GL Account</label>
    <referenceTo>blng__GLAccount__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>