rc/rc-calm/main/default/objects/FinanceTransaction/fields/Finance_Book__c.field-meta.xml
<CustomField>
    <fullName>Finance_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>