rc/rc-calm/main/default/objects/FinanceTransaction/fields/Finance_Period__c.field-meta.xml
<CustomField>
    <fullName>Finance_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>