rc/rc-calm/main/default/objects/FinanceTransaction/fields/Finance_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_System_ID__c</fullName>
    <label>Finance System ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>