rc/rc-calm/main/default/objects/FinanceTransaction/fields/Finance_System_Integration_Mode__c.field-meta.xml
<CustomField>
    <fullName>Finance_System_Integration_Mode__c</fullName>
    <label>Finance System Integration Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>