rc/rc-calm/main/default/objects/FinanceTransaction/fields/Finance_System_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_System_Integration_Status__c</fullName>
    <label>Finance System Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Selected, Pending, In Process, Retry In Process, Success, Error, Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>