rc/rc-calm/main/default/objects/FinanceTransaction/fields/GL_Rule__c.field-meta.xml
<CustomField>
    <fullName>GL_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>