rc/rc-calm/main/default/objects/FinanceTransaction/fields/GL_Treatment__c.field-meta.xml
<CustomField>
    <fullName>GL_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>