rc/rc-calm/main/default/objects/FinanceTransaction/fields/Original_Credit_GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_GL_Account_Name__c</fullName>
    <label>Original Credit GL Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>