rc/rc-calm/main/default/objects/FinanceTransaction/fields/Original_Debit_GL_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Debit_GL_Account_Number__c</fullName>
    <label>Original Debit GL Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>