rc/rc-calm/main/default/objects/FinanceTransaction/fields/Original_Finance_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Finance_Book_Name__c</fullName>
    <label>Original Finance Book Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>