rc/rc-calm/main/default/objects/FinanceTransaction/fields/Original_Finance_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Finance_Period_Start_Date__c</fullName>
    <label>Original Finance Period Start Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>