rc/rc-calm/main/default/objects/FinanceTransaction/fields/Original_GL_Treatment_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_GL_Treatment_Name__c</fullName>
    <label>Original GL Treatment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>